Load oso rules from the database instead of hard coding. Use Result instead of panicking to prevent mutex poisoning. Be consistent with oso library in order of arguments.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ pgx = "=0.7.0"
 lazy_static = "=1.4.0"
 oso = "=0.26.4"
 askama = "=0.11.1"
+anyhow = "=1.0"
 
 [patch.crates-io]
 oso = { path = "../oso/languages/rust/oso" }
