--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,17 +16,17 @@ pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
 pg_test = []
 
 [dependencies]
-pgx = "=0.7.0"
+pgx = "~0.7.4"
 lazy_static = "=1.4.0"
 oso = "=0.26.4"
 askama = "=0.11.1"
 anyhow = "=1.0"
 
 [patch.crates-io]
-oso = { path = "../oso/languages/rust/oso" }
+oso = { git = 'https://github.com/MFAshby/oso.git', branch = 'main' }
 
 [dev-dependencies]
-pgx-tests = "=0.7.0"
+pgx-tests = "~0.7.4"
 
 [profile.dev]
 panic = "unwind"
